# tsml-pipeline

./: .gitignore  README.md  analyze_signals.py  demo.py  portfolio_report.py  pyproject.toml  run_etoro_demo.py  run_weekly_signal.py
configs/: example.yaml
scripts/: analyze_portfolio.py  weekly_job.py
src/tsml/: __init__.py  config.py
src/tsml/backtest/: __init__.py  engine.py
src/tsml/broker/: __init__.py  base.py  etoro_client.py  execution.py  risk.py
src/tsml/data_loader/: __init__.py  base.py  splits.py  yfinance_loader.py
src/tsml/features/: __init__.py  pipeline.py  targets.py  transformers.py
src/tsml/metrics/: __init__.py  ml.py  returns.py
src/tsml/models/: __init__.py  base.py  baselines.py
src/tsml/pipelines/: __init__.py  evaluate.py  train.py
src/tsml/portfolio/: __init__.py  ranker.py  simulator.py  state.py  strategy.py  tracker.py
src/tsml/reporting/: __init__.py  plots.py
src/tsml/validation/: __init__.py  splitters.py
tests/: conftest.py  test_analyze_portfolio.py  test_analyze_signals.py  test_backtest.py  test_baselines.py  test_broker.py  test_etoro_demo.py  test_evaluate.py  test_ml_metrics.py  test_pipeline.py  test_portfolio_state.py  test_ranker.py  test_returns_metrics.py  test_simulator.py  test_splits.py  test_strategy.py  test_targets.py  test_tracker.py  test_train_pipeline.py  test_transformers.py  test_validate_ohlcv.py  test_walk_forward_split.py  test_weekly_job.py  test_yfinance_loader.py
